--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^10.4.4",
-    "jest-dom": "^4.0.0"
+    "jest-dom": "^4.0.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3"
   }
 }
